Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8
-
ARM64
-
Related to performance
-
ASCII strings will be sent to client connections slightly faster.
Description
my_convert() in strings/ctype.c has this special optimization for i386 and x86_64:
#if defined(__i386__) || defined(__x86_64__)
|
/* |
Special loop for i386, it allows to refer to a
|
non-aligned memory block as UINT32, which makes
|
it possible to copy four bytes at once. This
|
gives about 10% performance improvement comparing
|
to byte-by-byte loop.
|
*/
|
for ( ; length >= 4; length-= 4, from+= 4, to+= 4) |
{
|
if ((*(uint32*)from) & 0x80808080) |
break; |
*((uint32*) to)= *((const uint32*) from); |
}
|
#endif /* __i386__ */
|
 |
... /* Unoptimized bytewise processing goes here */ |
Two things can be improved about that code:
1. 64-bit architectures like x86_64 could be optimized even further by processing 8 bytes at a time;
2. Other 64-bit architectures like aarch64 could also benefit from the same optimization, rather than process the input byte by byte.
In our case we see a few percent improvement in CPU-bound sysbench OLTP RO on AArch64, which is not too bad for such a simple optimization.
Attachments
Issue Links
- relates to
-
MDEV-20277 Disable -fno-strict-aliasing
-
- Closed
-
-
MDEV-38398 SEGV on amd64v3 instruction set in my_convert
-
- Closed
-
-
MDEV-37148 Unaligned access in strings/ctype.c, crashes with upcoming GCC 16 (or UBSAN)
-
- Closed
-
-
MDEV-37786 my_convert randomly crashes when converting from utf8mb3 to utf8mb4
-
- Closed
-
-
MDEV-38628 mariadbd crash during SHOW ENGINES on SLES 16.0 VM (AMD64)
-
- Closed
-
-
MDEV-38989 main.ctype_utf16le SEGV in Ubuntu 26.04 (amd64v3)
-
- Closed
-